# bert_as_service_web

./: README.md  README.rst  build.sh  pyproject.toml  render.yaml  run.sh
web/: manage.py
web/bert_sim_main/: asgi.py  settings.py  urls.py  wsgi.py
web/compute_sim/: apps.py  forms.py  urls.py  views.py
web/compute_sim/templates/compute_sim/: index.html
